--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: red;
+    background-color: hsl(212, 45%, 89%);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -13,29 +13,38 @@ body {
 }
 
 .container {
-    background: white;
+    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
+    background: white;
+    max-width: 300px;
     border-radius: 10px;
+    padding: 10px;
 }
 
 .img {
     border-radius: 10px;
     display: inline-block;
-   width: 50%;
-   text-align: center;
-}
-.img-container{
+    width: 90%;
     text-align: center;
 }
-  h1{
+
+.img-container {
+    text-align: center;
+}
+
+h1 {
     font-size: 1rem;
-    margin: 20px;
+    margin: 10px;
+    text-align: center;
+    width: 90%;
 }
-  p{
+
+p {
     font-size: 0.5rem;
-   
+    text-align: center;
+    width: 90%;
 }
- 
